--- a/html/conclusion.html
+++ b/html/conclusion.html
@@ -24,13 +24,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container w3-row">
     <div class="w3-col s8 w3-bar">
-      <span><h3>Parque eólico</h3<strong><h2>Paraguaná</h2></strong></span>
+  <span><h3>Parque eólico</h3> <h2><b>Paraguaná</b></h2></span>
     </div>
   </div>
   <hr>
   
   <div class="w3-container">
-    <h4><strong>Evaluación del Proyecto</strong></h4>
+    <h4><b>Evaluación del Proyecto</b></h4>
   </div>
   <div class="w3-bar-block w3-medium">
     <a href="..\index.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-globe fa-fw"></i> Datos generales</a>
@@ -95,97 +95,108 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
   </div>
 
-  <div class="w3-panel">
+   <div class="w3-panel">
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-third">
-        <h5><strong>Localización</strong></h5>
+        <h5><b>Localización</b></h5>
 		  <!-- Mapa ArcGis On line incrustado -->
-		<div class="embed-container">
-		<iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Mapa Parque Eólico Paraguaná" src="//www.arcgis.com/apps/Embed/index.html?webmap=41223a7042714e50899c92858fe5f86a&extent=-70.2728,11.7805,-70.1648,11.836&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
-		</iframe>
-		</div>
-      </div>
+      <div class="embed-container">
+	     <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Ubicacion Parque Eolico Paraguana" 
+		   src="//www.arcgis.com/apps/Embed/index.html?webmap=ef513e40de2549f68e6b6ad94a626736&extent=-70.2767,11.7744,-70.1926,11.8408&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
+		 </iframe>
+	   </div>
+     </div>
+	  
       <div class="w3-twothird">
-        <h5><strong>Puntos de medición</strong></h5>
-        <table class="w3-table w3-striped w3-white">
+        <h5><b>Puntos de medición</b></h5>
+        <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
           <tr>
 		    <td></td>
-            <td><strong>Puntos</strong></td>
-            <td><i><strong>PVOUT</strong></i></td>
-			<td><i><strong>GHI</strong></i></td>
-			<td><i><strong>DNI</strong></i></td>
+            <td><b>Puntos</b></td>
+			<td><b>Densidad</b></td>
+			<td><b>Velocidad</b></td>
+            <td><b>PVOUT</b></td>
+			<td><b>GHI</b></td>
 		  </tr>	
 		  <tr>
             <td></td>
             <td>Punto 1</td>
-            <td><i>1750</i></td>
-			<td><i>2222</i></td>
-			<td><i>2006</i></td>
+			<td>508 mW</td>
+			<td>8,5 m/s</td>
+            <td>1750</td>
+			<td>2222</td>
           </tr>
           <tr>
             <td></td>
             <td>Punto 2</td>
-            <td><i>1748</i></td>
-			<td><i>2221</i></td>
-			<td><i>2000</i></td>
+			<td>555 mW</td>
+			<td>8,7 m/s</td>
+            <td>1748</td>
+			<td>2221</td>
           </tr>
           <tr>
             <td></td>
             <td>Punto 3</td>
-            <td><i>1761</i></td>
-			<td><i>2239</i></td>
-			<td><i>2050</i></td>
+			<td>420 mW</td>
+			<td>8,0 m/s</td>
+            <td>1761</td>
+			<td>2239</td>
           </tr>
           <tr>
             <td></td>
             <td>Punto 4</td>
-            <td><i>1754</i></td>
-			<td><i>2239</i></td>
-			<td><i>2023</i></td>
+			<td>481 mW</td>
+			<td>8,3 m/s</td>
+            <td>1754</td>
+			<td>2239</td>
           </tr>
           <tr>
             <td></td>
             <td>Punto 5</td>
-            <td><i>1743</i></td>
-			<td><i>2214</i></td>
-			<td><i>1982</i></td>
+			<td>583 mW</td>
+			<td>8,9 m/s</td>
+            <td>1743</td>
+			<td>2214</td>
           </tr>
 		  <tr>
             <td></td>
             <td>Punto 6</td>
-            <td><i>1746</i></td>
-			<td><i>2216</i></td>
-			<td><i>1989</i></td>
+			<td>509 mW</td>
+			<td>8,5 m/s</td>
+            <td>1746</td>
+			<td>2216</td>
           </tr>
 		  <tr>
             <td></td>
-            <td>Promedio</td>
-            <td><i>1750</i></td>
-			<td><i>2225</i></td>
-			<td><i>2008</i></td>
-          </tr>
+			<td>Promedio</td>
+			<td><b>509 mW</b></td>
+			<td><b>8,5 m/s</b></td>
+            <td><b>1750</b></td>
+			<td><b>2225</b></td>
+	      </tr>
          </table>
-      </div>
-	  <div class="w3-medium w3-panel w3-margin-right">
-	  <p>Los datos de potencial eólico e irradiación solar que soportaron el estudio fueron obtenidos mediante la utilización de aplicaciones web especializadas, las cuales ofrecen estos servicios de datos gratuitos para apalancar proyectos de enerias alternativas.</p>
-	  </div>
+      </div><br>
     </div>
-  </div>
- <hr>
- 
-  <div class="w3-container">
-    <h5><strong>Mapa potencial eólico y solar</strong></h5>
-    <ul class="w3-ul w3-card-4 w3-white">
-      <li class="w3-padding-16">
-			  <!-- Mapa ArcGis On line incrustado -->
-		<div class="embed-container">
-		   <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Mapa Parque Eólico Paraguaná" src="//www.arcgis.com/apps/Embed/index.html?webmap=41223a7042714e50899c92858fe5f86a&extent=-70.2728,11.7805,-70.1648,11.836&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
-		   </iframe>
-		</div>
-      </li>
-    </ul>
+	<div class="w3-medium w3-panel w3-margin-right">
+	  <p>Los datos de potencial eólico e irradiación solar que soportaron el estudio fueron obtenidos mediante la utilización de aplicaciones web especializadas, las cuales ofrecen estos servicios de datos gratuitos para apalancar proyectos de enerias alternativas.</p>
+   </div>
   </div>
   <hr>
+  
+     <div class="w3-container">
+      <h5><b>Mapa potencial eólico y solar</b></h5>
+	  <ul class="w3-ul w3-card-4 w3-white">
+        <li class="w3-padding-16">
+   						  <!-- Mapa ArcGis On line incrustado -->
+		  <div class="embed-container1">
+		   <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Mapa Potencial Eolico y Solar" 
+		      src="//www.arcgis.com/apps/Embed/index.html?webmap=45c920f3bb8e4fc8aebbcdcf4551a725&extent=-70.2557,11.7907,-70.2136,11.8239&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
+		   </iframe>
+		  </div>
+		</li>
+     </ul>
+	</div>
+    <hr>
   
   <div class="w3-container">
     <h5><strong>Propuesta</strong></h5>
@@ -215,11 +226,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p>Especialista en SIG, Catastro, Cartografía y Tutor de cursos en línea.</p><br>
       </div>
 	  <div class="w3-col s8 w3-bar">
-      <span><strong>Mis contactos</strong></span><br>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook"></i></a>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
-	    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
+      <span><b>Mis redes sociales</strong></b><br>
+        <a href="#" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="https://github.com/jeviloriar/" target="_blank"class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
+	    <a href="#" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-linkedin"></i></a>
      </div>
     </div>
   </div><br>
@@ -229,7 +239,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	<h3>Curso: Geodatos en aplicaciones web</h3>
       <div class="w3-container w3-third">
         <h5 class="w3-bottombar w3-border-green">Colaboradores</h5>
-        <p>Geoinnova</p>
+        <a href="https://geoinnova.org" target="_blank" <p>Geoinnova</p></a>
         <p>International Renewable Energy Agency </p>
 		<p>SolarisGis</p>
       </div>
