--- a/html/eolico.html
+++ b/html/eolico.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="..\css\mapa_esri.css">
 <link rel="stylesheet" href="..\fonts\Raleway\Raleway.css">
 <link rel="stylesheet" href="..\fonts\font-awesome\font-awesome.min.css">
-<link rel="icon" href="../favicon.ico" type="image/x-icon">
+<link rel="icon" href="..favicon.ico" type="image/x-icon">
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
@@ -24,12 +24,12 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container w3-row">
     <div class="w3-col s8 w3-bar">
-      <span><h3>Parque eólico</h3<strong><h2>Paraguaná</h2></strong></span>
+      <span><h3>Parque eólico</h3> <h2><b>Paraguaná</b></h2></span>
     </div>
   </div>
   <hr>
   <div class="w3-container">
-    <h4><strong>Evaluación del Proyecto</strong></h4>
+    <h4><b>Evaluación del Proyecto</b></h4>
   </div>
   <div class="w3-bar-block w3-medium">
     <a href="..\index.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-globe fa-fw"></i> Datos generales</a>
@@ -94,86 +94,91 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
   </div>
 
-  <div class="w3-panel">
+    <div class="w3-panel">
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-third">
-        <h5><strong>Localización</strong></h5>
+        <h5><b>Localización</b></h5>
 		  <!-- Mapa ArcGis On line incrustado -->
-		<div class="embed-container">
-		<iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Mapa Parque Eólico Paraguaná" src="//www.arcgis.com/apps/Embed/index.html?webmap=41223a7042714e50899c92858fe5f86a&extent=-70.2728,11.7805,-70.1648,11.836&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
-		</iframe>
-		</div>
-      </div>
+      <div class="embed-container">
+	     <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Ubicacion Parque Eolico Paraguana" 
+		   src="//www.arcgis.com/apps/Embed/index.html?webmap=ef513e40de2549f68e6b6ad94a626736&extent=-70.2767,11.7744,-70.1926,11.8408&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
+		 </iframe>
+	   </div>
+     </div>
+	  
       <div class="w3-twothird">
-        <h5><strong>Puntos de medición</strong></h5>
-        <table class="w3-table w3-striped w3-white">
+        <h5><b>Puntos de medición</b></h5>
+        <table class="w3-table w3-striped w3-bordered w3-border w3-white">
           <tr>
 		    <td></td>
-            <td><strong>Puntos</strong></td>
-            <td><i><strong>Altura</strong></i></td>
-			<td><i><strong>Densidad</strong></i></td>
-			<td><i><strong>Velocidad</strong></i></td>
+            <td><b>Puntos</b></td>
+            <td><b>Altura</b></td>
+			<td><b>Densidad</b></td>
+			<td><b>Velocidad</b></td>
 		  </tr>	
 		  <tr>
             <td></td>
             <td>Punto 1</td>
-            <td><i>50 m</i></td>
-			<td><i>508 mW</i></td>
-			<td><i>8,5 m/s</i></td>
+            <td>50 m</td>
+			<td>508 mW</td>
+			<td>8,5 m/s</td>
           </tr>
           <tr>
             <td></td>
             <td>Punto 2</td>
-            <td><i>50 m</i></td>
-			<td><i>555 mW</i></td>
-			<td><i>8,7 m/s</i></td>
+            <td>50 m</td>
+			<td>555 mW</td>
+			<td>8,7 m/s</td>
           </tr>
           <tr>
             <td></td>
             <td>Punto 3</td>
-            <td><i>50 m</i></td>
-			<td><i>420 mW</i></td>
-			<td><i>8,0 m/s</i></td>
+            <td>50 m</td>
+			<td>420 mW</td>
+			<td>8,0 m/s</td>
           </tr>
           <tr>
             <td></td>
             <td>Punto 4</td>
-            <td><i>50 m</i></td>
-			<td><i>481 mW</i></td>
-			<td><i>8,3 m/s</i></td>
+            <td>50 m</td>
+			<td>481 mW</td>
+			<td>8,3 m/s</td>
           </tr>
           <tr>
             <td></td>
             <td>Punto 5</td>
-            <td><i>50 m</i></td>
-			<td><i>583 mW</i></td>
-			<td><i>8,9 m/s</i></td>
+            <td>50 m</td>
+			<td>583 mW</td>
+			<td>8,9 m/s</td>
           </tr>
 		  <tr>
             <td></td>
             <td>Punto 6</td>
-            <td><i>50 m</i></td>
-			<td><i>509 mW</i></td>
-			<td><i>8,5 m/s</i></td>
+            <td>50 m</td>
+			<td>509 mW</td>
+			<td>8,5 m/s</td>
           </tr>
 		  <tr>
             <td></td>
-            <td><strong>Promedio</strong></td>
-            <td><i><strong>50 m</strong></i></td>
-			<td><i><strong>509 mW</strong></i></td>
-			<td><i><strong>8,5 m/s</strong></i></td>
+            <td><b>Promedio</b></td>
+            <td><b>50 m</b></td>
+			<td><b>509 mW</b></td>
+			<td><b>8,5 m/s</b></td>
           </tr>
          </table>
       </div><br>
-	  <div class="w3-medium w3-panel w3-margin-right">
-	  <p>Datos obtenidos de la aplicación web <a href "https://globalwindatlas.info/" target="_blank">Global Wind Atlas</a>, mediciones correspondiente a los vientos a una altitud de 50 m, con resolución espacial de 10x10 Km. Se tomaron valores de seis (6) puntos distribuidos dentro del área de estudio. En base a estos datos la velocidad del viento promedio es de 8,48 m/s y la densidad de potencia ronda los 509 mW.</p>
-	  </div>
     </div>
+	<div class="w3-medium w3-panel w3-margin-right">
+	  <p>Datos obtenidos de la aplicación web <a href "https://www.globalwindatlas.info/" target="_blank">Global Wind Atlas</a>, 
+	  mediciones correspondiente a los vientos a una altitud de 50 m, con resolución espacial de 10x10 Km. 
+	  Se tomaron valores de seis (6) puntos distribuidos dentro del área de estudio. 
+	  En base a estos datos la velocidad del viento promedio es de 8,48 m/s y la densidad de potencia ronda los 509 mW.</p>
+   </div>
   </div>
   <hr>
   
-  <div class="w3-container">
-    <h5><strong>Capacidades de generación eólica</strong></h5>
+   <div class="w3-container">
+    <h5><b>Capacidades de generación eólica</b></h5>
     <p>Potencial de generación</p>
     <div class="w3-grey">
       <div class="w3-container w3-center w3-padding w3-green" style="width:90%">90%</div>
@@ -197,7 +202,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <hr>
 
   <div class="w3-container">
-    <h5><strong>Costo / Beneficio</strong></h5>
+    <h5><b>Costo / Beneficio</b></h5>
     <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
       <tr>
         <td>Inversión total</td>
@@ -226,25 +231,25 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </tr>
     </table>
     <p>Fuente: <strong>CORPOELEC</strong></p>
-  </div>
-  <hr>
-  
-  <div class="w3-container">
-    <h5><strong>Mapa potencial eólico</strong></h5>
-    <ul class="w3-ul w3-card-4 w3-white">
-      <li class="w3-padding-16">
-			  <!-- Mapa ArcGis On line incrustado -->
-		<div class="embed-container">
-		   <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Mapa Parque Eólico Paraguaná" src="//www.arcgis.com/apps/Embed/index.html?webmap=41223a7042714e50899c92858fe5f86a&extent=-70.2728,11.7805,-70.1648,11.836&zoom=true&previewImage=false&scale=false&disable_scroll=true&theme=light">
-		   </iframe>
-		</div>
-      </li>
-    </ul>
-  </div>
-  <hr>
+  </div><br>
+   
+      <div class="w3-container">
+      <h5><b>Mapa potencial eólico</b></h5>
+	  <ul class="w3-ul w3-card-4 w3-white">
+        <li class="w3-padding-16">
+   						  <!-- Mapa ArcGis On line incrustado -->
+		  <div class="embed-container1">
+            <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Mapa Potencial Eolico Paraguana" 
+			   src="//www.arcgis.com/apps/Embed/index.html?webmap=18240374f35e405c8bb1957991e7c8df&extent=-70.2552,11.7907,-70.2132,11.8239&zoom=true&previewImage=false&scale=false&disable_scroll=false&theme=light">
+			</iframe>
+		  </div>
+		</li>
+     </ul>
+	</div>
+	<hr>
 	
   <div class="w3-container">
-    <h5><strong>Análisis de resultados</strong></h5>
+    <h5><b>Análisis de resultados</b></h5>
     <ul class="w3-ul w3-card-4 w3-white">
       <li class="w3-padding-16">
 		<div class="w3-medium w3-panel w3-margin-right">
@@ -260,7 +265,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <hr>
 
   <div class="w3-container">
-    <h5><strong>Autor</strong></h5>
+    <h5><b>Autor</b></h5>
     <div class="w3-row">
       <div class="w3-col m2 text-center">
         <img class="w3-circle" src="../imagenes/carnet.jpg" style="width:96px;height:96px">
@@ -270,11 +275,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <p>Especialista en SIG, Catastro, Cartografía y Tutor de cursos en línea.</p><br>
       </div>
 	  <div class="w3-col s8 w3-bar">
-      <span><strong>Mis contactos</strong></span><br>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook"></i></a>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
-	    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
+      <span><b>Mis redes sociales</b></span><br>
+        <a href="#" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="https://github.com/jeviloriar/" target="_blank"class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
+	    <a href="#" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-linkedin"></i></a>
       </div>
 	  </div>
     </div><br>
@@ -284,8 +288,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	<h3>Curso: Geodatos en aplicaciones web</h3>
       <div class="w3-container w3-third">
         <h5 class="w3-bottombar w3-border-green">Colaboradores</h5>
-        <p>Geoinnova</p>
-        <p>International Renewable Energy Agency </p>
+        <a href="https://geoinnova.org" target="_blank" <p>Geoinnova</p></a>
+        <p>International Renewable Energy Agency</p>
 		<p>SolarisGis</p>
       </div>
       <div class="w3-container w3-third">
