--- a/html/solar.html
+++ b/html/solar.html
@@ -34,7 +34,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-bar-block w3-medium">
     <a href="..\index.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-globe fa-fw"></i> Datos generales</a>
     <a href="eolico.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-lightbulb-o fa-fw"></i> Analisis eólico</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-sun-o fa-fw"></i> Analisis solar</a>
+    <a href="solar.html" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-sun-o fa-fw"></i> Analisis solar</a>
 	<a href="conclusion.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-legal fa-fw"></i> Conclusiones</a>
   </div>
 </nav>
@@ -108,7 +108,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	  
       <div class="w3-twothird">
         <h5><b>Puntos de medición</b></h5>
-        <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
+        <table class="w3-table w3-striped w3-bordered w3-border w3-white">
           <tr>
 		    <td></td>
             <td><b>Puntos</b></td>
@@ -169,7 +169,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div><br>
     </div>
 	<div class="w3-medium w3-panel w3-margin-right">
-	  <p>Datos obtenidos de la aplicación web <a href "//www.globalsolaratlas.info/" target="_blank">Atlas Global Solar</a>, mediciones correspondiente a la irradiación solar. Los datos poseen una resolución espacial de unos 30 segundos de arco de grado, el equivalente a 1 km aproximadamente. Las capas de datos proporcionadas incluyen el promedio anual a largo plazo de las siguientes variables:</p>
+	  <p>Datos obtenidos de la aplicación web <a href="https://globalsolaratlas.info/" target="_blank"> Atlas Global Solar</a>, mediciones correspondiente a la irradiación solar. Los datos poseen una resolución espacial de unos 30 segundos de arco de grado, el equivalente a 1 km aproximadamente. Las capas de datos proporcionadas incluyen el promedio anual a largo plazo de las siguientes variables:</p>
 	  <p>•	PVOUT - Potencial de energía fotovoltaica en unidades de medida kWh/kWp.</p>
       <p>•	GHI - Irradiación horizontal global en unidades de medida kWh/m2.</p>
       <p>•	DIF: irradiación horizontal difusa (kWh/m2).</p>
@@ -214,12 +214,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-col m10 w3-container">
         <h4>Jorge Viloria <span class="w3-opacity w3-medium">Sep 29, 2014, 9:12 PM</span></h4>
         <p>Especialista en SIG, Catastro, Cartografía y Tutor de cursos en línea.</p><br>
+		<div class="w3-container w3-dark-grey w3-padding-small">
       </div>
 	  <div class="w3-col s8 w3-bar">
       <span><b>Mis redes sociales</b></span><br>
-        <a href="#" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="https://twitter.com/jeviloriar" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-twitter"></i></a>
         <a href="https://github.com/jeviloriar/" target="_blank"class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
-	    <a href="https://www.linkedin.com/in/jorge-viloria-658013118/" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
+	    <a href="https://www.linkedin.com/in/jorge-viloria-658013118/" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-linkedin"></i></a>
       </div>
 	  </div>
     </div><br>
@@ -229,15 +230,15 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	<h3>Curso: Geodatos en aplicaciones web</h3>
       <div class="w3-container w3-third">
         <h5 class="w3-bottombar w3-border-green">Colaboradores</h5>
-        <a href="https://geoinnova.org" target="_blank" <p>Geoinnova</p></a>
-        <p>International Renewable Energy Agency </p>
-		<p>SolarisGis</p>
+        <a href="https://geoinnova.org" target="_blank" style="text-decoration:none"> <p>Geoinnova</p></a>
+		<a href="https://www.irena.org/?" target="_blank" style="text-decoration:none"> <p>International Renewable Energy Agency</p></a>
+		<a href="https://solargis.info/" target="_blank" style="text-decoration:none"> <p>SolarisGis</p></a>
       </div>
       <div class="w3-container w3-third">
         <h5 class="w3-bottombar w3-border-red">Sistemas y aplicaciones</h5>
-        <p>Navegador Mozilla Firefox</p>
+        <p>Mozilla Firefox</p>
         <p>OpenStreeMap</p>
-        <p>GeoWE</p>
+        <p>ArcGis Online</p>
       </div>
       <div class="w3-container w3-third">
         <h5 class="w3-bottombar w3-border-orange">Dirigido a</h5>
