--- a/html/eolico.html
+++ b/html/eolico.html
@@ -169,7 +169,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div><br>
     </div>
 	<div class="w3-medium w3-panel w3-margin-right">
-	  <p>Datos obtenidos de la aplicación web <a href "https://www.globalwindatlas.info/" target="_blank">Global Wind Atlas</a>, 
+	  <p>Datos obtenidos de la aplicación web <a href="https://www.globalwindatlas.info/" target="_blank">Global Wind Atlas</a>, 
 	  mediciones correspondiente a los vientos a una altitud de 50 m, con resolución espacial de 10x10 Km. 
 	  Se tomaron valores de seis (6) puntos distribuidos dentro del área de estudio. 
 	  En base a estos datos la velocidad del viento promedio es de 8,48 m/s y la densidad de potencia ronda los 509 mW.</p>
@@ -276,9 +276,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
 	  <div class="w3-col s8 w3-bar">
       <span><b>Mis redes sociales</b></span><br>
-        <a href="#" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="https://twitter.com/jeviloriar" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-twitter"></i></a>
         <a href="https://github.com/jeviloriar/" target="_blank"class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
-	    <a href="#" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-linkedin"></i></a>
+	    <a href="https://www.linkedin.com/in/jorge-viloria-658013118/" class="w3-bar-item w3-button" target="_blank"><i class="fa fa-linkedin"></i></a>
       </div>
 	  </div>
     </div><br>
@@ -288,15 +288,15 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 	<h3>Curso: Geodatos en aplicaciones web</h3>
       <div class="w3-container w3-third">
         <h5 class="w3-bottombar w3-border-green">Colaboradores</h5>
-        <a href="https://geoinnova.org" target="_blank" <p>Geoinnova</p></a>
-        <p>International Renewable Energy Agency</p>
-		<p>SolarisGis</p>
+        <a href="https://geoinnova.org" target="_blank" style="text-decoration:none"> <p>Geoinnova</p></a>
+		<a href="https://www.irena.org/?" target="_blank" style="text-decoration:none"> <p>International Renewable Energy Agency</p></a>
+		<a href="https://solargis.info/" target="_blank" style="text-decoration:none"> <p>SolarisGis</p></a>
       </div>
       <div class="w3-container w3-third">
         <h5 class="w3-bottombar w3-border-red">Sistemas y aplicaciones</h5>
-        <p>Navegador Mozilla Firefox</p>
+        <p>Mozilla Firefox</p>
         <p>OpenStreeMap</p>
-        <p>GeoWE</p>
+        <p>ArcGis Online</p>
       </div>
       <div class="w3-container w3-third">
         <h5 class="w3-bottombar w3-border-orange">Dirigido a</h5>
